flux/infrastructure/webapps/admin-panel/resources/service-admin-panel.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-panel
  namespace: webapps
  labels:
    app: admin-panel
spec:
  selector:
    app: admin-panel
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
